--- a/src/app/layout/header/HeaderBlock.styles.scss
+++ b/src/app/layout/header/HeaderBlock.styles.scss
@@ -8,17 +8,15 @@ $navbar-innerwidth: 500px;
 $navbar-hidden-innerwidth: 400px;
 
 .navBarContainer {
-  @include mut.flexed($justify-content: space-between, $align-items: center);
+  @include mut.flexed($justify-content: space-between);
   @include mut.sized(100%, 82px);
-  @include mut.rem-padded(21px, 32px, 21px, 32px);
+  @include mut.rem-padded(30px, 20px, 30px, 20px);
 
   background-color: c.$pure-white-color;
   position: fixed;
   z-index: 7;
 
   svg {
-    @include mut.rem-margined($right: 34px);
-
     &:hover {
       cursor: pointer;
     }
@@ -54,7 +52,14 @@ $navbar-hidden-innerwidth: 400px;
   }
 }
 
-.leftPartContainer,
+.leftPartContainer
+{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .rightPartContainer {
   @include mut.flexed($justify-content: space-between, $align-items: center);
 }
@@ -128,8 +133,9 @@ $navbar-hidden-innerwidth: 400px;
     }
     
     .leftPartContainer {
-      svg {
-        @include mut.rem-margined($left: 12px);
+      .ant-input {
+        width: 90% !important;
+        margin: 300px;
       }
     }
 
