--- a/src/app/common/components/modals/Donates/DonatesModal.styles.scss
+++ b/src/app/common/components/modals/Donates/DonatesModal.styles.scss
@@ -25,7 +25,7 @@
     .ant-modal-close {
       @include mut.positioned-as(absolute, $left: 94%, $top: -27px);
       @include mut.circular(80px, c.$pure-white-color);
-      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);(0px 4px 4px rgba(0, 0, 0, 0.25));
 
       &:hover {
         background-color: c.$modal-hover-color;
@@ -116,7 +116,8 @@
       border-radius: 15px !important;
       border: 3px solid c.$dark-red-color;
       @include vnd.vendored(transition, 'background-color .75s ease');
-      filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.19)); 
+      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.19);
+
 
       > span {
         @include vnd.vendored(transition, 'color .75s ease');
@@ -148,20 +149,20 @@
       border: none;
       display: flex;
       align-items: center;
-      
-      
+
+
       .ant-checkbox-input {
         @include mut.sized(24px, 24px);
       }
-      
+
       span{
         display: inline-block;
         vertical-align:baseline;
-                   
+
         .ant-checkbox-inner {
           @include mut.sizedImportant(24px, 24px);
         }
-  
+
         &:last-child {
           @include mut.with-font(ft.$roboto-font, $font-size: 15px, $font-weight: 300);
 
@@ -284,7 +285,7 @@
       }
       .donatesBtnContainer{
         @include mut.sized(308px, 100%);
-        
+
         gap: 0;
         > * {
           width: f.pxToRem(100px) !important;
@@ -314,7 +315,7 @@
       .donatesInputContainer{
         @include mut.sized(100%, 28px);
         margin: 16px;
-        
+
         >.checkbox-borderline {
           display: flex;
           overflow: visible !important;
@@ -322,10 +323,10 @@
           > span{
             display: inline-block;
             vertical-align: middle;
-      
+
             &:last-child {
               @include mut.with-font(ft.$roboto-font, $font-size: 12px, $font-weight: 500);
-            
+
               height: f.pxToRem(28px);
               padding-top: f.pxToRem(2px);
               font-style: normal;
