--- a/src/features/AdditionalPages/ContactUsPage/MainBlock/ContactBlock/ContactBlock.styles.scss
+++ b/src/features/AdditionalPages/ContactUsPage/MainBlock/ContactBlock/ContactBlock.styles.scss
@@ -3,7 +3,7 @@
 @use "@assets/sass/variables/_variables.fonts.scss" as ft;
 
 @mixin hoverStyles {
-    filter: drop-shadow(0 0 10px rgba(255, 0, 0, 0.612));
+    box-shadow: 0 0 10px rgba(255, 0, 0, 0.612);
     cursor: pointer;
 }
 
@@ -11,19 +11,19 @@
     .contactBlock{
         position: relative;
         bottom: f.pxToRem(50px);
-    
+
         .contactCover{
             position: relative;
-            z-index: 1;   
+            z-index: 1;
         }
-    
+
         .contactLogo{
             position: absolute;
             top: f.pxToRem(-110px);
             left: f.pxToRem(-54px);
             z-index: 0;
         }
-        
+
         .emailBlock img,  .phonesBlock img{
             margin-right: f.pxToRem(10px);
         }
@@ -35,7 +35,7 @@
                 @include hoverStyles;
             }
         }
-    
+
         .socials{
             .icon{
                 transition: all 0.2s ease;
@@ -45,12 +45,12 @@
                 @include hoverStyles;
             }
         }
-         
+
         .email{
             @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 36px);
             line-height: 48px;
             color: #1D1F23;
-        } 
+        }
     }
 }
 
@@ -60,22 +60,22 @@
             bottom: 0;
             .icon{
                 transform: scale(0.6);
-            } 
-    
+            }
+
             .contactLogo{
                 @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 54px);
                 line-height: 71px;
                 width: f.pxToRem(140px);
-                height: f.pxToRem(140px);    
-                
+                height: f.pxToRem(140px);
+
                 top: f.pxToRem(-18px);
                 left: f.pxToRem(220px);
             }
-    
-            .socials .icon{            
-                margin-right: f.pxToRem(20px);   
+
+            .socials .icon{
+                margin-right: f.pxToRem(20px);
             }
-    
+
             .email{
                 @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 20px);
                 line-height: 26px;
@@ -83,6 +83,6 @@
                 letter-spacing: 0.005em;
             }
         }
-    }   
-} 
+    }
+}
 
