--- a/src/features/AdditionalPages/NewsPage/News.styles.scss
+++ b/src/features/AdditionalPages/NewsPage/News.styles.scss
@@ -252,7 +252,7 @@
                     border-radius: 10px;
                     width: 100%;
                     margin-bottom: 10px;
-                    filter: drop-shadow(0px 4px 4px rgba(219, 52, 36, 0.18));
+                    box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.18);
                 }
             }
 
