--- a/src/features/AdditionalPages/SupportUsPage/components/DonationBlock.styles.scss
+++ b/src/features/AdditionalPages/SupportUsPage/components/DonationBlock.styles.scss
@@ -71,25 +71,25 @@
   .donatesBtnContainer {
     @include mut.flexed($gap: 10px, $wrap: wrap);
     margin: 0 20px;
-  
+
     > * {
       @include mut.sized(130px, 58px);
       @include mut.full-rounded(11px);
       @include mut.flex-centered();
-      
+
       border: 1px solid c.$dark-red-color;
       @include vnd.vendored(transition, 'background-color .75s ease');
-      filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.19));
+      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.19);
       > span {
         @include vnd.vendored(transition, 'color .75s ease');
         @include mut.with-font(ft.$closer-text-font, $font-size: 20px, $font-weight: 500);
         color: c.$dark-red-color;
       }
-  
+
       &:where(:hover, &.active) {
         background-color: c.$accented-red-color;
         border: 3px solid c.$accented-red-color;
-  
+
         > span {
           color: c.$pure-white-color;
           font-weight: 500;
@@ -213,7 +213,7 @@
       @include mut.rem-margined($bottom: 20px);
       height: f.pxToRem(42px);
     }
-    
+
     .amountInput {
       @include mut.with-font(ft.$closer-text-font, $font-size: 32px, $font-weight: 500);
       display: flex;
@@ -260,7 +260,7 @@
       label {
         @include mut.sizedImportant($height: 25px);
       }
-      
+
       >.checkbox-borderline {
         display: flex;
         overflow: visible;
