--- a/src/features/MainPage/StaticBanners/StaticBanner.styles.scss
+++ b/src/features/MainPage/StaticBanners/StaticBanner.styles.scss
@@ -7,7 +7,7 @@
 .mainPageBlockStaticBanner {
     @include mut.flexed($justify-content: space-between);
     @include mut.full-rounded(50px);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin: f.pxToRem(50px) f.pxToRem(20px);
     padding: 0 f.pxToRem(46.5px);
     background-color: c.$pure-white-color;
